# Financial_GenAI

./: main.py  pyproject.toml  requirements.txt
backup/: Sample Fact Find_summary.md
backup_data/: Sample Fact Find_data.json  Sample Fact Find_summary.html  Sample Fact Find_summary_backup_2.md  Sample Fact Find_summary_backup_3.md  Sample Fact Find_summary_data.json  Sample Fact Find_summary_summary.md  Sample Fact Find_summary_summary_data.json  Sample Fact Find_summary_summary_summary.md
data/: Sample Fact Find_data.json  Sample Fact Find_summary.md  Sample Fact Find_summary_backeu.md  Sample Fact Find_summary_backup_4.md  Sample Fact Find_summary_data.json  Sample Fact Find_summary_summary.md
main/: advanced_graph.py  config.py  document_cache_manager.py  email_utils.py  genAi_views.py  graph.py  helper.py  langgraph_visualizer.py  parser.py  processor.py  prompts.py  summarizer.py
