[project]
name = "financial-genai"
version = "0.1.0"
description = "Gen AI for Financial Services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.11.7",
    "aiohttp-retry==2.8.3",
    "aiosignal==1.3.1",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "arrow==1.3.0",
    "asgiref==3.8.1",
    "attrs==24.2.0",
    "backoff==2.2.1",
    "bcrypt==4.2.1",
    "billiard==4.2.1",
    "boto==2.49.0",
    "boto3==1.35.69",
    "botocore==1.35.69",
    "brotli==1.1.0",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "celery==5.4.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "chroma-hnswlib==0.7.6",
    "chromadb==0.6.3",
    "click==8.1.7",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "coloredlogs==15.0.1",
    "cryptography==43.0.3",
    "cssselect2==0.8.0",
    "defusedxml==0.8.0rc2",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "durationpy==0.9",
    "fastapi==0.115.12",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "fontawesome-free==5.15.4",
    "fonttools==4.58.0",
    "fpdf==1.7.2",
    "frozenlist==1.5.0",
    "fsspec==2025.3.2",
    "gevent==24.11.1",
    "google-auth==2.40.1",
    "googleapis-common-protos==1.70.0",
    "graphviz>=0.20.3",
    "greenlet==3.1.1",
    "grpcio==1.71.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.31.2",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "importlib-resources==6.5.2",
    "iniconfig==2.0.0",
    "jiter==0.8.2",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jwcrypto==1.5.6",
    "kafka-python==2.0.3",
    "kombu==5.4.2",
    "kubernetes==32.0.1",
    "langchain==0.3.25",
    "langchain-chroma==0.2.3",
    "langchain-core==0.3.59",
    "langchain-experimental>=0.3.4",
    "langchain-ollama==0.3.2",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.4.5",
    "langgraph-checkpoint==2.0.26",
    "langgraph-prebuilt==0.1.8",
    "langgraph-sdk==0.1.69",
    "langsmith==0.3.42",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "matplotlib>=3.10.3",
    "mdurl==0.1.2",
    "mmh3==5.1.0",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "mysql-connector==2.2.9",
    "nest-asyncio==1.6.0",
    "networkx>=3.5",
    "numpy==2.1.3",
    "oauthlib==3.2.2",
    "ollama==0.4.8",
    "onnxruntime==1.22.0",
    "openai==1.58.1",
    "opencv-python==4.10.0.84",
    "opentelemetry-api==1.33.0",
    "opentelemetry-exporter-otlp-proto-common==1.33.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.33.0",
    "opentelemetry-instrumentation==0.54b0",
    "opentelemetry-instrumentation-asgi==0.54b0",
    "opentelemetry-instrumentation-fastapi==0.54b0",
    "opentelemetry-proto==1.33.0",
    "opentelemetry-sdk==1.33.0",
    "opentelemetry-semantic-conventions==0.54b0",
    "opentelemetry-util-http==0.54b0",
    "orjson==3.10.18",
    "ormsgpack==1.9.1",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "paramiko==3.5.0",
    "pillow==11.0.0",
    "pluggy==1.5.0",
    "posthog==4.0.1",
    "prompt-toolkit==3.0.48",
    "propcache==0.2.0",
    "protobuf==5.29.4",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "pydot>=4.0.0",
    "pydyf==0.11.0",
    "pygments==2.19.1",
    "pyjwt==2.10.0",
    "pynacl==1.5.0",
    "pypdf==5.5.0",
    "pyphen==0.17.2",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pysftp==0.2.9",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python3-openid==3.2.0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rsa==4.9.1",
    "s3transfer==0.10.4",
    "setuptools==75.6.0",
    "shellingham==1.5.4",
    "shortuuid==1.0.13",
    "six==1.16.0",
    "sniffio==1.3.1",
    "social-auth-app-django==5.4.2",
    "social-auth-core==4.5.4",
    "sqlalchemy==2.0.41",
    "sqlparse==0.5.2",
    "starlette==0.46.2",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tinycss2==1.4.0",
    "tinyhtml5==2.0.0",
    "tokenizers==0.21.1",
    "tqdm==4.67.1",
    "twilio==9.3.7",
    "typer==0.15.4",
    "types-python-dateutil==2.9.0.20241003",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "unicodecsv==0.14.1",
    "urllib3==2.2.3",
    "uvicorn==0.34.2",
    "uvloop==0.21.0",
    "vine==5.1.0",
    "watchfiles==1.0.5",
    "wcwidth==0.2.13",
    "weasyprint==65.1",
    "webencodings==0.5.1",
    "websocket==0.2.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "whitenoise==6.8.2",
    "wrapt==1.17.2",
    "xxhash==3.5.0",
    "yarl==1.18.0",
    "zipp==3.21.0",
    "zope-event==5.0",
    "zope-interface==7.1.1",
    "zopfli==0.2.3.post1",
    "zstandard==0.23.0",
]
